# FlitSolver

./: .gitignore  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
src/: CMakeLists.txt  evaluator.cpp  evaluator.tests.cpp  game.cpp  game.tests.cpp  main.cpp  repl.cpp  ui.cpp
src/bots/: CMakeLists.txt  alphabetabot.cpp  botbase.cpp  bots.cpp  evaluator.tests.cpp  randombot.cpp
